@@ -6,9 +6,12 @@
  */
 package org.elasticsearch.xpack.core.security.authz.permission;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.apache.lucene.util.automaton.Automaton;
 import org.elasticsearch.ElasticsearchException;
 import org.elasticsearch.ElasticsearchSecurityException;
+import org.elasticsearch.common.Strings;
 import org.elasticsearch.common.cache.Cache;
 import org.elasticsearch.common.cache.CacheBuilder;
 import org.elasticsearch.common.settings.Setting;
@@ -22,6 +25,7 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeSet;
 import java.util.concurrent.ExecutionException;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
@@ -33,6 +37,8 @@ import static org.elasticsearch.xpack.core.security.SecurityField.setting;
  * use an {@link org.apache.lucene.util.automaton.Automaton}, which can be costly to create once you account for minimization
  */
 public final class FieldPermissionsCache {
+
+    private static final Logger logger = LogManager.getLogger(FieldPermissionsCache.class);
 
     public static final Setting<Long> CACHE_SIZE_SETTING = Setting.longSetting(
         setting("authz.store.roles.field_permissions.cache.max_size_in_bytes"),
@@ -67,10 +73,37 @@ public final class FieldPermissionsCache {
      */
     public FieldPermissions getFieldPermissions(FieldPermissionsDefinition fieldPermissionsDefinition) {
         try {
-            return cache.computeIfAbsent(
-                fieldPermissionsDefinition,
-                (key) -> new FieldPermissions(key, FieldPermissions.initializePermittedFieldsAutomaton(key))
-            );
+            return cache.computeIfAbsent(fieldPermissionsDefinition, FieldPermissions::new);
+        } catch (ExecutionException e) {
+            if (e.getCause() instanceof ElasticsearchException es) {
+                throw es;
+            } else {
+                throw new ElasticsearchSecurityException("unable to compute field permissions", e);
+            }
+        }
+    }
+
+    public void validateFieldPermissionsWithCache(String roleName, FieldPermissionsDefinition fieldPermissionsDefinition) {
+        try {
+            // we're "abusing" the cache here a bit: to avoid excessive WARN logging, only log if the entry is not cached, i.e., on first
+            // encounter
+            cache.computeIfAbsent(fieldPermissionsDefinition, key -> {
+                var fieldPermissions = new FieldPermissions(key);
+                if (fieldPermissions.hasLegacyExceptFields()) {
+                    logger.warn(
+                        "Role [{}] has exceptions for field permissions that cover fields prefixed with [_] "
+                            + "but are not a subset of the granted fields. "
+                            + "This is supported for backwards compatibility only. "
+                            + "To avoid counter-intuitive field-level security behavior, ensure that the [except] field is a subset of the "
+                            + "[grant] field by either including the missing _-prefixed fields in the [grant] field, "
+                            + "or by removing them from the [except] field. "
+                            + "You cannot exclude any of [{}] since these are minimally required metadata fields.",
+                        roleName,
+                        Strings.collectionToCommaDelimitedString(new TreeSet<>(FieldPermissions.METADATA_FIELDS_ALLOWLIST))
+                    );
+                }
+                return fieldPermissions;
+            });
         } catch (ExecutionException e) {
             if (e.getCause() instanceof ElasticsearchException es) {
                 throw es;
@@ -92,6 +125,7 @@ public final class FieldPermissionsCache {
             .findFirst();
         return allowAllFieldPermissions.orElseGet(() -> {
             final Set<FieldGrantExcludeGroup> fieldGrantExcludeGroups = new HashSet<>();
+            boolean hasLegacyExceptFields = false;
             for (FieldPermissions fieldPermissions : fieldPermissionsCollection) {
                 final List<FieldPermissionsDefinition> fieldPermissionsDefinitions = fieldPermissions.getFieldPermissionsDefinitions();
                 if (fieldPermissionsDefinitions.size() != 1) {
@@ -99,15 +133,23 @@ public final class FieldPermissionsCache {
                         "Expected a single field permission definition, but found [" + fieldPermissionsDefinitions + "]"
                     );
                 }
-                fieldGrantExcludeGroups.addAll(fieldPermissionsDefinitions.get(0).getFieldGrantExcludeGroups());
+                fieldGrantExcludeGroups.addAll(fieldPermissionsDefinitions.getFirst().getFieldGrantExcludeGroups());
+                hasLegacyExceptFields = hasLegacyExceptFields || fieldPermissions.hasLegacyExceptFields();
             }
             final FieldPermissionsDefinition combined = new FieldPermissionsDefinition(fieldGrantExcludeGroups);
+            final boolean hasLegacyExceptFieldsFinal = hasLegacyExceptFields;
             try {
                 return cache.computeIfAbsent(combined, (key) -> {
                     List<Automaton> automatonList = fieldPermissionsCollection.stream()
                         .map(FieldPermissions::getIncludeAutomaton)
                         .collect(Collectors.toList());
-                    return new FieldPermissions(key, Automatons.unionAndMinimize(automatonList));
+                    return new FieldPermissions(
+                        key,
+                        new FieldPermissions.AutomatonWithLegacyExceptFieldsFlag(
+                            Automatons.unionAndMinimize(automatonList),
+                            hasLegacyExceptFieldsFinal
+                        )
+                    );
                 });
             } catch (ExecutionException e) {
                 throw new ElasticsearchException("unable to compute field permissions", e);
